[gd_scene load_steps=5 format=3 uid="uid://bk1ygemvl1iiu"]

[ext_resource type="Script" path="res://games/alchemical_sort/scripts/Menu.gd" id="1"]
[ext_resource type="FontFile" uid="uid://lfx73a34jolm" path="res://assets/font/vetka.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://drastdcmvxgeq" path="res://games/alchemical_sort/assets/20260223_190246_nano-pro_This is a nice retro 90s pixel art background with.png" id="3_3lult"]
[ext_resource type="Texture2D" uid="uid://dp35rhbfojs51" path="res://games/alchemical_sort/assets/alchemy_bg2.png" id="4_iouw8"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Title" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 110.0
offset_right = 540.0
offset_bottom = 285.0
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.05, 0.02, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 72
text = "ALCHEMICAL
SORT"
horizontal_alignment = 1

[node name="DiffLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 317.0
offset_right = 540.0
offset_bottom = 342.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Choose your difficulty"
horizontal_alignment = 1

[node name="EasyButton" type="Button" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 360.0
offset_right = 334.0
offset_bottom = 402.0
theme_override_colors/font_color = Color(0.45, 0.85, 0.5, 1)
theme_override_colors/font_outline_color = Color(0.05, 0.1, 0.05, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Apprentice"
flat = true

[node name="MediumButton" type="Button" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 421.0
offset_right = 333.0
offset_bottom = 468.0
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.08, 0.02, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Adept"
flat = true

[node name="HardButton" type="Button" parent="."]
layout_mode = 0
offset_left = 202.0
offset_top = 489.0
offset_right = 335.0
offset_bottom = 535.0
theme_override_colors/font_color = Color(0.9, 0.38, 0.32, 1)
theme_override_colors/font_outline_color = Color(0.12, 0.04, 0.02, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Arcane"
flat = true

[node name="ZenButton" type="Button" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 556.0
offset_right = 336.0
offset_bottom = 603.0
theme_override_colors/font_color = Color(0.72, 0.5, 0.92, 1)
theme_override_colors/font_outline_color = Color(0.08, 0.04, 0.12, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Zen"
flat = true

[node name="MysteryButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 150.0
offset_top = 553.0
offset_right = 390.0
offset_bottom = 607.0
theme_override_colors/font_color = Color(0.45, 0.75, 0.9, 1)
theme_override_colors/font_outline_color = Color(0.03, 0.06, 0.14, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "Mystery"
flat = true

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 222.0
offset_top = 626.0
offset_right = 316.0
offset_bottom = 661.0
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "< BACK"
flat = true

[node name="20260223190246Nano-proThisIsANiceRetro90sPixelArtBackgroundWith" type="Sprite2D" parent="."]
z_index = -99
position = Vector2(269, 480.583)
scale = Vector2(0.703125, 0.703125)
texture = ExtResource("3_3lult")

[node name="AlchemyBg2" type="Sprite2D" parent="."]
position = Vector2(268.5, 479.269)
scale = Vector2(0.299665, 0.299665)
texture = ExtResource("4_iouw8")

[connection signal="pressed" from="EasyButton" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="MediumButton" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="HardButton" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="ZenButton" to="." method="_on_zen_pressed"]
[connection signal="pressed" from="MysteryButton" to="." method="_on_mystery_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_quit_pressed"]
